// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Symbols - Bracket Snapshot Bracket 1`] = `
Array [
  0.01807,
  0,
  0.02107,
  0,
  0.01165,
  0.01335,
  0.0171,
  0.01388,
  0.00659,
  0.02726,
  0.014,
  0.02798,
  0.00294,
  0.04162,
  0.01178,
  0.04225,
  0.00074,
  0.05626,
  0.01045,
  0.05662,
  0,
  0.07105,
  0.01,
  0.07105,
  0.00074,
  0.08584,
  0.01045,
  0.08548,
  0.00294,
  0.10048,
  0.01178,
  0.09985,
  0.00659,
  0.11484,
  0.014,
  0.11412,
  0.01165,
  0.12875,
  0.0171,
  0.12822,
  0.01807,
  0.1421,
  0.02107,
  0.1421,
]
`;

exports[`Equation Symbols - Bracket Snapshot Bracket 2`] = `
Array [
  0.003,
  0,
  0,
  0,
  0.00942,
  0.01335,
  0.00396,
  0.01388,
  0.01448,
  0.02726,
  0.00706,
  0.02798,
  0.01812,
  0.04162,
  0.00928,
  0.04225,
  0.02033,
  0.05626,
  0.01062,
  0.05662,
  0.02107,
  0.07105,
  0.01107,
  0.07105,
  0.02033,
  0.08584,
  0.01062,
  0.08548,
  0.01812,
  0.10048,
  0.00928,
  0.09985,
  0.01448,
  0.11484,
  0.00706,
  0.11412,
  0.00942,
  0.12875,
  0.00396,
  0.12822,
  0.003,
  0.1421,
  0,
  0.1421,
]
`;

exports[`Equation Symbols - Bracket Static 1`] = `
Array [
  0.01807,
  0,
  0.02107,
  0,
  0.01165,
  0.01335,
  0.0171,
  0.01388,
  0.00659,
  0.02726,
  0.014,
  0.02798,
  0.00294,
  0.04162,
  0.01178,
  0.04225,
  0.00074,
  0.05626,
  0.01045,
  0.05662,
  0,
  0.07105,
  0.01,
  0.07105,
  0.00074,
  0.08584,
  0.01045,
  0.08548,
  0.00294,
  0.10048,
  0.01178,
  0.09985,
  0.00659,
  0.11484,
  0.014,
  0.11412,
  0.01165,
  0.12875,
  0.0171,
  0.12822,
  0.01807,
  0.1421,
  0.02107,
  0.1421,
]
`;
